clusters/development/backend/portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pki-rest-interface
  namespace: portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pki-rest-interface
  template:
    metadata:
      labels:
        app: pki-rest-interface
    spec:
      serviceAccountName: portal-pki-rest
      containers:
        - args:
            - --level
            - "debug"
            - --audience
            - "https://api.hmtest.de"
            - --ssl_service
            - "pki-service:8081"
            - --smime_service
            - "pki-service:8081"
            - --domain_service
            - "domain-rest-interface:8081"
            - --jwks_uri
            - "https://sso.hm.edu/idp/profile/oidc/keyset"
          image: ghcr.io/hm-edu/portal-backend/pki-rest-interface:main-a11cda3-1694752814 # {"$imagepolicy": "flux-system:pki-rest-interface-policy"}
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domain-rest-interface
  namespace: portal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: domain-rest-interface
  template:
    metadata:
      annotations:
        traffic.sidecar.istio.io/excludeOutboundPorts: "5432"
      labels:
        app: domain-rest-interface
    spec:
      serviceAccountName: portal-domain
      containers:
        - args:
            - --level
            - "debug"
            - --audience
            - "https://api.hmtest.de"
            - --jwks_uri
            - "https://sso.hm.edu/idp/profile/oidc/keyset"
            - --db
            - "postgresql://pki:pki@postgres.portal.svc.cluster.local/domain"
            - --preseed
            - "/data/data.json"
            - --ssl_service
            - "pki-service:8081"
          volumeMounts:
            - mountPath: /data
              name: domain-data
          image: ghcr.io/hm-edu/portal-backend/domain-rest-interface:main-88c2a9f-1694596756 # {"$imagepolicy": "flux-system:domain-rest-interface-policy"}
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8081
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
      volumes:
        - name: domain-data
          configMap:
            name: domain-data
            items:
              - key: data.json
                path: data.json
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eab-rest-interface
  namespace: portal
spec:
  replicas: 3
  selector:
    matchLabels:
      app: eab-rest-interface
  template:
    metadata:
      annotations:
        traffic.sidecar.istio.io/excludeOutboundPorts: "5432"
      labels:
        app: eab-rest-interface
    spec:
      serviceAccountName: portal-eab
      containers:
        - args:
            - --level
            - "debug"
            - --audience
            - "https://api.hmtest.de"
            - --jwks_uri
            - "https://sso.hm.edu/idp/profile/oidc/keyset"
            - --db
            - "postgresql://acme:acme@postgres.portal.svc.cluster.local/eab"
            - --acme_db
            - "postgresql://acme:acme@postgres.portal.svc.cluster.local/acme"
            - --provisioner_id
            - "acme/acme"
            - --domain_service
            - "domain-rest-interface:8081"
          image: ghcr.io/hm-edu/portal-backend/eab-rest-interface:main-88c2a9f-1694596758 # {"$imagepolicy": "flux-system:eab-rest-interface-policy"}
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8081
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pki-service
  namespace: portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pki-service
  template:
    metadata:
      annotations:
        traffic.sidecar.istio.io/excludeOutboundPorts: "5432"
        prometheus.io/port: '2222'
        prometheus.io/path: "/"
        prometheus.io/scrape: 'true'
      labels:
        app: pki-service
    spec:
      serviceAccountName: portal-pki-internal
      containers:
        - args:
            - --level
            - "debug"
            - --sectigo_user
            - "fritterh"
            - --sectigo_customeruri
            - "DFN"
            - --ssl_org_id
            - "30032"
            - --ssl_term
            - "365"
            - --ssl_profile
            - "15863"
            - --smime_profile
            - "16307"
            - --smime_org_id
            - "30032"
            - --smime_term
            - "1095"
            - --smime_student_term
            - "365"
            - --smime_key_length
            - "3072"
            - --smime_key_type
            - "RSA"
            - --db
            - "postgresql://pki:pki@postgres.portal.svc.cluster.local/certificates"
          image: ghcr.io/hm-edu/portal-backend/pki-service:main-88c2a9f-1694596751 # {"$imagepolicy": "flux-system:pki-service-policy"}
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 8081
              protocol: TCP
            - containerPort: 2222
              protocol: TCP
          readinessProbe:
            exec:
              command: ["/grpc_health_probe", "-addr=:8081"]
            initialDelaySeconds: 10
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: domain-rest-interface
  name: domain-rest-interface
  namespace: portal
spec:
  selector:
    app: domain-rest-interface
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: grpc
    port: 8081
    targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pki-service
  name: pki-service
  namespace: portal
spec:
  selector:
    app: pki-service
  type: ClusterIP
  ports:
  - name: grpc
    port: 8081
    targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eab-rest-interface
  name: eab-rest-interface
  namespace: portal
spec:
  selector:
    app: eab-rest-interface
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: grpc
    port: 8081
    targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pki-rest-interface
  name: pki-rest-interface
  namespace: portal
spec:
  selector:
    app: pki-rest-interface
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
