clusters/development/backend/portal-istio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portal
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: domain-rest-interface
  name: domain-rest-interface
  namespace: portal
spec:
  selector:
    app: domain-rest-interface
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: grpc
    port: 8081
    targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pki-service
  name: pki-service
  namespace: portal
spec:
  selector:
    app: pki-service
  type: ClusterIP
  ports:
  - name: grpc
    port: 8081
    targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eab-rest-interface
  name: eab-rest-interface
  namespace: portal
spec:
  selector:
    app: eab-rest-interface
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pki-rest-interface
  name: pki-rest-interface
  namespace: portal
spec:
  selector:
    app: pki-rest-interface
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: pki-service-mtls
  namespace: portal
spec:
  host: pki-service.portal.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: domain-rest-interface-mtls
  namespace: portal
spec:
  host: domain-rest-interface.portal.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: eab-rest-interface-mtls
  namespace: portal
spec:
  host: eab-rest-interface.portal.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: portal-mtls
  namespace: portal
spec:
  mtls:
    mode: STRICT
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-prod
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: portal-cert
    hosts:
    - "my.hmtest.de"
    - "domain.api.hmtest.de"
    - "pki.api.hmtest.de"
    - "eab.api.hmtest.de"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pki
  namespace: portal
spec:
  hosts:
  - pki.api.hmtest.de
  gateways:
  - istio-system/gateway-prod
  http:
  - route:
    - destination:
        host: pki-rest-interface
        port:
          number: 80
    corsPolicy:
      allowOrigins:
      - exact: https://my.hmtest.de
      - exact: http://localhost:3000
      allowMethods:
      - POST
      - GET
      - OPTIONS
      - DELETE
      allowCredentials: false
      allowHeaders:
      - Authorization
      - Content-Type
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: domain
  namespace: portal
spec:
  hosts:
  - domain.api.hmtest.de
  gateways:
  - istio-system/gateway-prod
  http:
  - route:
    - destination:
        host: domain-rest-interface
        port:
          number: 80
    corsPolicy:
      allowOrigins:
      - exact: https://my.hmtest.de
      - exact: http://localhost:3000
      allowMethods:
      - POST
      - GET
      - OPTIONS
      - DELETE
      allowCredentials: false
      allowHeaders:
      - Authorization
      - Content-Type
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eab
  namespace: portal
spec:
  hosts:
  - eab.api.hmtest.de
  gateways:
  - istio-system/gateway-prod
  http:
  - route:
    - destination:
        host: eab-rest-interface
        port:
          number: 80
    corsPolicy:
      allowOrigins:
      - exact: https://my.hmtest.de
      - exact: http://localhost:3000
      allowMethods:
      - POST
      - GET
      - OPTIONS
      - DELETE
      allowCredentials: false
      allowHeaders:
      - Authorization
      - Content-Type
